; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_symbolic-ref.c_check_symref.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_symbolic-ref.c_check_symref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"No such ref: %s\00", align 1
@REF_ISSYMREF = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"ref %s is not a symbolic ref\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @check_symref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_symref(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i8* @resolve_ref_unsafe(i8* %12, i32 0, i32* null, i32* %10)
  store i8* %13, i8** %11, align 8
  %14 = load i8*, i8** %11, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @die(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %17)
  br label %33

19:                                               ; preds = %4
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* @REF_ISSYMREF, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %32, label %24

24:                                               ; preds = %19
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %24
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @die(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %28)
  br label %31

30:                                               ; preds = %24
  store i32 1, i32* %5, align 4
  br label %46

31:                                               ; preds = %27
  br label %32

32:                                               ; preds = %31, %19
  br label %33

33:                                               ; preds = %32, %16
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %45

36:                                               ; preds = %33
  %37 = load i32, i32* %8, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %36
  %40 = load i8*, i8** %11, align 8
  %41 = call i8* @shorten_unambiguous_ref(i8* %40, i32 0)
  store i8* %41, i8** %11, align 8
  br label %42

42:                                               ; preds = %39, %36
  %43 = load i8*, i8** %11, align 8
  %44 = call i32 @puts(i8* %43)
  br label %45

45:                                               ; preds = %42, %33
  store i32 0, i32* %5, align 4
  br label %46

46:                                               ; preds = %45, %30
  %47 = load i32, i32* %5, align 4
  ret i32 %47
}

declare dso_local i8* @resolve_ref_unsafe(i8*, i32, i32*, i32*) #1

declare dso_local i32 @die(i8*, i8*) #1

declare dso_local i8* @shorten_unambiguous_ref(i8*, i32) #1

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
